--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,22 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 2016,
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-console": [
-            "error",
-            {
-              "allow": ["warn", "error"]
-            }
-        ],
-        "indent": [
-            "error",
-            4
-        ],
-        "quotes": [
-            "warn",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
-}
+	"extends": "eslint:recommended",
+	"env": {
+	  "node": true,
+	  "mocha": true,
+	  "es6": true
+	},
+	"plugins": ["chai-friendly"],
+	"rules": {
+	  "comma-dangle": 0,
+	  "consistent-return": 0,
+	  "function-paren-newline": ["error", "never"],
+	  "implicit-arrow-linebreak": ["off"],
+	  "no-param-reassign": 0,
+	  "no-underscore-dangle": 0,
+	  "no-shadow": 0,
+	  "no-console": 0,
+	  "no-plusplus": 0,
+	  "no-unused-expressions": 0,
+	  "chai-friendly/no-unused-expressions": 2
+	}
+  }
