--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "moatevents",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Mirror Moat Fund events to DB",
   "main": "events.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Moat Network",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.1",
+    "dotenv": "^6.1.0",
+    "mongoose": "^5.3.4",
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
-    "eslint": "^5.7.0"
+    "chai": "^4.1.2",
+    "eslint": "^5.7.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1",
+    "sinon": "^6.3.4",
+    "sinon-mongoose": "^2.2.1",
+    "supertest": "^3.3.0"
   }
 }
